--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes"> 
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
+	<!-- 开启https协议下的<a>标签的DNS预解析 -->
+	<meta http-equiv="x-dns-prefetch-control" content="on">
     <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon">
     <title>music</title>
   </head>
